SUBDIRS = algorithms coders
totalincludedir = $(includedir)/total
totalinclude_HEADERS = BigInt.hh Camera.hh CompilationOptions.h Config.hh ContourTree.hh CyclicBitSet.hh FileImageSource.hh findtransform.hh gaussianelimination.hh GF4Poly.hh GLImageSource.hh GLOutputMechanism.hh Image.hh ImageSource.hh LocatedObject.hh MatrixTag.hh polysolve.hh RingTag.hh ShapeChain.hh ShapeTree.hh Socket.hh Tag.hh Tags.hh Template.hh TemplateTag.hh TextOutputMechanism.hh V4LImageSource.hh WorldState.hh XOutputMechanism.hh XOutputStagesMechanism.hh EllipseTransform.hh QuadTangleTransform.hh ImageOutputMechanism.hh SpeedMath.hh ContourFollower.hh Entity.hh TagCircle.hh TagSquare.hh MonochromeImage.hh IEEE1394ImageSource.hh
