SUBDIRS = algorithms coders
totalincludedir = $(includedir)/total
totalinclude_HEADERS = BigInt.hh Camera.hh CompilationOptions.h Config.hh CyclicBitSet.hh FileImageSource.hh gaussianelimination.hh GF4Poly.hh GLImageSource.hh  Image.hh ImageSource.hh LocatedObject.hh polysolve.hh Socket.hh Template.hh V4LImageSource.hh  XOutputMechanism.hh SpeedMath.hh Entity.hh TagCircle.hh TagSquare.hh MonochromeImage.hh IEEE1394ImageSource.hh

# disabled ImageOutputMechanism.hh GLOutputMechanism.hh TextOutputMechanism.hh
# obsolete findtransform.hh Tags.hh Tag.hh MatrixTag.hh RingTag.hh TemplateTag.hh WorldState.hh XOutputStagesMechanism.hh