cantagincludedir = $(includedir)/cantag/coders
cantaginclude_HEADERS =  Coder.hh
cantaginclude_HEADERS += CRCCoder.hh
cantaginclude_HEADERS += GF4Coder.hh
cantaginclude_HEADERS += ParityCoder.hh
cantaginclude_HEADERS += RawCoder.hh
cantaginclude_HEADERS += SCCCoder.hh
cantaginclude_HEADERS += SymbolChunkCoder.hh
cantaginclude_HEADERS += TripOriginalCoder.hh
cantaginclude_HEADERS += CRC.hh
cantaginclude_HEADERS += CRCSymbolChunkCoder.hh
