cantagincludedir = $(includedir)/cantag/entities
cantaginclude_HEADERS = Entity.hh
cantaginclude_HEADERS += ContourEntity.hh
cantaginclude_HEADERS += ConvexHullEntity.hh
cantaginclude_HEADERS += TransformEntity.hh
cantaginclude_HEADERS += ShapeEntity.hh
cantaginclude_HEADERS += SignalStrengthEntity.hh
cantaginclude_HEADERS += MaxSampleStrengthEntity.hh
cantaginclude_HEADERS += DecodeEntity.hh
cantaginclude_HEADERS += HoughEntity.hh

