totalincludedir = $(includedir)/total/algorithms
totalinclude_HEADERS = DistortionCorrection.hh FitEllipseLS.hh FitEllipseSimple.hh TransformEllipseFull.hh TransformEllipseLinear.hh SampleTagCircle.hh FitQuadTangleCorner.hh FitQuadTangleConvexHull.hh FitQuadTanglePolygon.hh TransformQuadTangleProjective.hh TransformQuadTangleReduced.hh TransformQuadTangleSpaceSearch.hh ConvexHull.hh


